map over thinning

--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -411,25 +411,26 @@ list(
         sample = steekproef,
         thin_dist = thin_dists
         ),
-      pattern = map(steekproef, thin_dists)
-  ),
-  tar_target(
-    steekproef_final,
-    replace_by_existing(
-      sample = steekproef_thinned,
-      existing_points = existing_data,
-      overlap_prop = 0.5,
-      sbp_file = sbp_akkervogels
-      ),
-    pattern = map(steekproef_thinned)
-  ),
-  tar_target(
-    output_objecten,
-    output_finaal(
-      files = list(steekproefkader = steekproefkader_finaal, 
-                   steekproef = steekproef_final),
-      write_out = TRUE
-      )
+      pattern = map(steekproef)
+    ),
+    tar_target(
+      steekproef_final,
+      replace_by_existing(
+        sample = steekproef_thinned,
+        existing_points = existing_data,
+        overlap_prop = 0.5,
+        sbp_file = sbp_akkervogels
+        ),
+      pattern = map(steekproef_thinned)
+    ),
+    tar_target(
+      output_objecten,
+      output_finaal(
+        files = list(steekproefkader = steekproefkader_finaal, 
+                     steekproef = steekproef_final),
+        write_out = FALSE
+        )
+    )
   )
 )
 ```
